<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegistrationLogin.RegisterActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="60sp"
            android:text="@string/tv_banner"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/teal_200"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-black"

            />

        <TextView
            android:id="@+id/tv_banner_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/tv_description_banner"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="italic"
            />

        <EditText
            android:id="@+id/et_username"
            android:backgroundTint="@color/teal_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/grey"
            android:textSize="24dp"
            android:hint="@string/username"
            />

        <EditText
            android:id="@+id/et_mail"
            android:backgroundTint="@color/teal_200"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="24dp"
            android:textColorHint="@color/grey"
            android:hint="@string/et_email"
            />

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"
            android:layout_marginTop="20dp"
            android:textColorHint="@color/grey"
            android:textSize="24dp"
            android:backgroundTint="@color/teal_200"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/tv_register"
            />

        <Button
            android:id="@+id/btn_back"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            android:text="nazad"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="gone"
            />

    </LinearLayout>

</ScrollView>